# i2c-factory

./: .gitignore  README.md  check_indexer.py  code_modification_eval.py  code_modification_perf_eval.py  code_modification_reliability_eval.py  config.yaml  db_utils.py  diagnose_code_modification.py  diagnostic_wrapper.py  factory_settings.yaml  generation_cycle.py  i2c_diagnostics.json  kb_demo.py  lean_knowledge_ingest.py  llm_providers.py  main.py  modification_diagnostics_results.json  pyproject.toml  pytest.ini  requirements.txt  run_modification_cycle.py  simple_kb_demo.py  story_manager.py  workflow.py
agents/: budget_manager.py  core_agents.py
agents/knowledge/: base.py  best_practices_agent.py  documentation_retriever.py  knowledge_ingestor.py  knowledge_management.py  knowledge_manager.py  knowledge_retriever.py
agents/modification_team/: __init__.py  code_modifier.py  config.py  context_utils.py  factory.py  modification_planner.py  python_code_chunker.py  static_analysis_tools.py  utils.py
agents/quality_team/: __init__.py  guardrail_agent.py  integration_checker_agent.py  reviewer_agent.py  static_analysis_agent.py
agents/reflective/: context_aware_operator.py  issue_resolution_operator.py  plan_refinement_operator.py
agents/sre_team/: __init__.py  dependency.py  sandbox.py  unit_test.py  version_control.py
better_indexing_test/: sample.py
cli/: ascii.py  controller.py  demo.py  input.py  knowledge_commands.py  recovery.py  rich_output.py  session.py  theme.py  view.py
cli/config/: documentation_types.json
cli/utils/: documentation_type_selector.py
config/: config.py
demo/scenarios/: api_security_validator.json  code_genius.json  crypto_dashboard_wow.json  data_pipeline_factory.json
demo/scripts/: demo_runner.py  interactive_demo.py  json_demo_runner.py  metrics_collector.py
demos/: README.md  quickstart.md  requirements.txt
final_test/: final_example.py
fresh_test/: hello.py
i2c_test/: test.py  test_api.py
i2c_test/test_app/: benchmark.py  config.py  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py  test_app.db  users.py  users.py.bak
misc/: Release0.1.md  agno_native_implementation_summary.md
models/: user_story.py
rag_code_test/: calculator.py
rag_test_project/: test.py
recovery_test/: example.py
scripts/: check_and_create_files.py  check_versions.py  fix_db_connection.py  real_world_test.py  test_cli_interaction.py  test_feature_pipeline.py  test_full_system.py  verify_imports.py  verify_installation.py
simple_test/: test.py
src/i2c/: __main__.py  app.py  bootstrap.py  db_utils.py  llm_providers.py  story_manager.py
test_project/: greetings.py
tests/: analyze_retrieved_context_dependencies.py  conftest.py  debug_files.py  demo_function_modification.py  diagnose_code_modification.py  diagnose_modification.py  direct_fix.py  quick_integration_test.py  safe_prompt_analysis.py  smoke_test_legacy.py  smoke_test_retrieval.py  smoke_test_tools.py  test_agentic_integration.py  test_agentic_knowledge_flow_simple.py  test_agentic_orchestration.py  test_agentic_workflow_integration.py  test_agno_native_bloat_reduction.py  test_agno_native_compatibility.py  test_agno_native_simple.py  test_api_enhancement.py  test_api_route_integration.py  test_architectural_fixes.py  test_bypass_json.py  test_code_modifier.py  test_code_modifier_smoke.py  test_context_evolution_team.py  test_debug_logging_fixes.py  test_debug_rag.py  test_diagnostic_logging.py  test_direct_modif_agno.py  test_direct_modification.py  test_direct_modification_via_manager_agno.py  test_docker_build_fixes.py  test_docker_fixes.py  test_enhanced_rag_utilization.py  test_enhancer_caching.py  test_enterprise_quality.py  test_feature_pipeline.py  test_frontend_detection.py  test_function_modification.py  (+26 more)
tests/integration/: test_architectural_intelligence_integration.py  test_architectural_pipeline_fullstack.py  test_auto_unit_test_generation.py  test_complete_orchestration_pipeline.py  test_container_based_validation.py  test_debug_quality_flow.py  test_end_to_end_agentic_evolution.py  test_error_handling_robustness.py  test_file_path_resolver_integration.py  test_real_apply.py  (+19 more)
utils/: logger.py  review_storage.py
workflow/: __init__.py  feature_integration.py  feature_pipeline.py  generation.py  knowledge_integration.py  orchestrator.py  self_healing_controller.py  session.py  session_handlers.py  sre_team_workflow.py  utils.py
(+405 files in other folders)
