[tool.poetry]
name = "idea-to-code-factory"
version = "0.1.0"
description = "Interactive AI-driven CLI tool for code generation and modification"
authors = ["Gabriel Sarmiento <gabrielsarmiento@gmail.com>"]
license = "AGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python                = ">=3.12,<4.0"
lancedb               = "^0.22.0"
pyarrow               = "^20.0.0"
pandas                = "^2.2.3"
numpy                 = "<2.0"             # pin to 1.x for C-extensions compatibility
sentence-transformers = "^2.2.0"          # for your embedding utilities
agno                  = "*"               # core AGNO agents framework
llm-providers         = "*"               # LLM backend providers
groq                  = "0.23.1"
# New dependencies for document parsing
pypdf2                = "^3.0.0"          # PDF parsing
python-docx           = "^0.8.11"         # .docx parsing
beautifulsoup4        = "^4.12.2"         # HTML parsing
lxml                  = "^4.9.3"          # XML/HTML parser backend
watchdog              = "^6.0.0"          # File watching
torch                 = "2.2.2"
pypdf                 = "^5.4.0"          # PDF reader
tantivy               = "^0.22.2"
protobuf              = "^6.30.2"


[[tool.poetry.packages]]
include = "agents"

[[tool.poetry.packages]]
include = "cli"

[[tool.poetry.packages]]
include = "config"

[[tool.poetry.packages]]
include = "data"

[[tool.poetry.packages]]
include = "utils"

[[tool.poetry.packages]]
include = "workflow"

[tool.poetry.group.dev.dependencies]
pytest       = "^7.0.0"
pytest-mock  = "^3.8.0"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
