[tool.poetry]
name        = "i2c"
version     = "0.2.0"
description = "Interactive AI-driven CLI tool for code generation and modification"
authors     = ["Gabriel Sarmiento <gabrielsarmiento@gmail.com>"]
license     = "AGPL"
readme      = "README.md"

# 🔑 Point Poetry at your src/ folder
packages = [
  { include = "i2c", from = "src" }
]

[tool.poetry.dependencies]
python                = "^3.11"
torch                 = "2.2.2"
lancedb               = "^0.22.0"
pyarrow               = "^20.0.0"
pandas                = "^2.2.3"
numpy                 = "<2.0"
sentence-transformers = "^2.2.0"
agno                  = "*"
llm-providers         = "*"
groq                  = "0.23.1"
pypdf2                = "^3.0.0"
python-docx           = "^0.8.11"
beautifulsoup4        = "^4.12.2"
lxml                  = "^4.9.3"
watchdog              = "^6.0.0"
pypdf                 = "^5.4.0"
tantivy               = "^0.22.2"
protobuf              = "^6.30.2"
mcp                   = "^1.7.1"
setuptools            = "^80.3.1"
jsonschema            = "^4.23.0"
esprima               = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest      = "^7.0.0"
pytest-mock = "^3.8.0"
reportlab   = "^4.4.0"

[tool.poetry.scripts]
i2c = "i2c.__main__:main"

[build-system]
requires       = ["poetry-core"]
build-backend  = "poetry.core.masonry.api"
